# integrated-async-io_deprecated

./: .gitmodules  Makefile  README.md  host_run.sh  host_run_async_socket.sh  host_run_callback.sh  host_run_concurrent.sh  host_run_concurrent2.sh
app/: Cargo.toml
client/src/: main.rs
enclave/: Cargo.toml  Enclave.config.xml
enclave/src/: lib.rs
enclave/src/tcp_echo_async_socket/: mod.rs
enclave/src/tcp_echo_async_socket/test_rt/: mod.rs
enclave/src/tcp_echo_io_uring/: mod.rs
enclave/src/tcp_echo_io_uring_callback/: mod.rs
