[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["The Teaclave Authors"]
edition = "2018"

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../deps/incubator-teaclave-sgx-sdk/sgx_types" }
sgx_tstd = { path = "../deps/incubator-teaclave-sgx-sdk/sgx_tstd", features = ["backtrace", "thread"] }
sgx_trts = { path = "../deps/incubator-teaclave-sgx-sdk/sgx_trts" }

[target.'cfg(sgx)'.dependencies]
async-socket = { path = "../deps/async-socket" }
futures = { version = "0.3", default-features = false }
async_rt = { path = "../deps/async-rt" } 
io_uring_callback = { path = "../deps/io-uring-callback" }
io-uring = { path = "../deps/io-uring" }
untrusted_allocator = { path = "../deps/untrusted_allocator" }
slab = { path = "../deps/slab" }
sharded-slab = { path = "../deps/sharded-slab" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }